# recycle

./: .gitignore  CMakeLists.txt  CONTRIBUTING.rst  DEPENDENCIES.rst  README.rst  circle.yml
conda-recipe/: meta.yaml  post-link.sh
docker/: README.md
docker/deb-ci/: Dockerfile_template  build_upload_deb.sh
docker/master-ci/: Dockerfile
docker/release-ci/: Dockerfile
input/: pride.xml
src/: CMakeLists.txt  cusum.cc  cusum.h  deploy_inst.cc  deploy_inst.h  deploy_inst_tests.cc  deviation.cc  deviation.h  diversion.cc  diversion.h  diverter.cc  diverter.h  efficiency.cc  efficiency.h  enrichment.cc  enrichment.h  enrichment_tests.cc  enrichment_tests.h  fuel_fab.cc  fuel_fab.h  fuel_fab_tests.cc  growth_region.cc  growth_region.h  growth_region_tests.cc  growth_region_tests.h  manager_inst.cc  manager_inst.h  manager_inst_tests.cc  manager_inst_tests.h  mixer.cc  mixer.h  mixer_tests.cc  process.cc  process.h  process_tests.cc  process_tests.h  pyre.cc  pyre.h  pyre_electrowinning.h  pyre_reduction.cc  (+25 more)
src/toolkit/: CMakeLists.txt  cusum.cc  cusum.h  diverter.cc  diverter.h
src/toolkit/pyroprocessing/: CMakeLists.txt  process.cc  process.h  pyre_reduction.cc  pyre_reduction.h  pyre_refining.cc  pyre_refining.h  pyre_volox.cc  pyre_volox.h  pyre_winning.cc  pyre_winning.h
tests/: README.rst  test_regression.py
tests/input/: dynamic_capacitated.xml  growth.xml
